# pySigma-backend-site24-7

./: LICENSE  README.md  pyproject.toml
sigma/backends/site-24-7/: __init__.py  site-24-7.py
sigma/pipelines/site-24-7/: __init__.py  site-24-7.py
tests/: test_backend_site-24-7.py  test_pipelines_site-24-7.py
