[tool.poetry]
name = "pySigma-backend-site-24-7"
version = "0.1.0"
description = "pySigma site-24-7 backend"
authors = ["Motti Kumar B <motti.br@suryaos.in>"]
license = "MIT"
repository = "https://github.com/MottiKumar/pySigma-backend-site-24-7"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
